--- a/consecionarioUQ/src/co/uniquindio/concesionario/view/loginAdministradorView.fxml
+++ b/consecionarioUQ/src/co/uniquindio/concesionario/view/loginAdministradorView.fxml
@@ -5,9 +5,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="399.0" prefWidth="369.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="399.0" prefWidth="369.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.uniquindio.concesionario.controller.LoginAdministradorController">
    <children>
-      <Label layoutX="160.0" layoutY="27.0" text="Empleado" />
+      <Label layoutX="117.0" layoutY="26.0" text="Login Administrador" />
+      <Label layoutX="52.0" layoutY="95.0" text="id" />
+      <Label layoutX="48.0" layoutY="159.0" text="Contraseña" />
+      <TextField fx:id="txtIdAdmin" layoutX="102.0" layoutY="90.0" />
+      <TextField fx:id="txtContraseniaAdmin" layoutX="137.0" layoutY="165.0" />
+      <Button fx:id="btnIngresar" layoutX="137.0" layoutY="266.0" mnemonicParsing="false" onAction="#ingresarVenAdmin" text="Ingresar" />
    </children>
 </AnchorPane>
