--- a/consecionarioUQ/src/co/uniquindio/concesionario/view/administradorView.fxml
+++ b/consecionarioUQ/src/co/uniquindio/concesionario/view/administradorView.fxml
@@ -1,13 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="402.0" prefWidth="394.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="736.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.uniquindio.concesionario.controller.AdministradorController">
    <children>
-      <Label layoutX="122.0" layoutY="37.0" text="Ventana administrador" />
+      <Button fx:id="btnReportes" layoutX="500.0" layoutY="63.0" mnemonicParsing="false" onAction="#ventReportes" text="Reportes" />
+      <MenuButton layoutY="-1.0" mnemonicParsing="false" text="menu">
+        <items>
+          <MenuItem fx:id="inicio" mnemonicParsing="false" onAction="#volverInicio" text="inicio" />
+            <SeparatorMenuItem mnemonicParsing="false" />
+          <MenuItem fx:id="login" mnemonicParsing="false" onAction="#volverLogin" text="cerrar sesion" />
+        </items>
+      </MenuButton>
+      <TableView fx:id="tblEmpleados" layoutX="22.0" layoutY="151.0" prefHeight="504.0" prefWidth="981.0">
+        <columns>
+          <TableColumn fx:id="colIdentificacion" prefWidth="166.0" text="identificacion" />
+          <TableColumn fx:id="colNombre" prefWidth="151.0" text="nombre" />
+            <TableColumn fx:id="colApellido" prefWidth="116.0" text="apellido" />
+            <TableColumn fx:id="colSueldo" prefWidth="235.0" text="sueldo" />
+            <TableColumn fx:id="colCargo" prefWidth="116.0" text="cargo" />
+            <TableColumn fx:id="colEstado" prefWidth="204.0" text="estado" />
+        </columns>
+      </TableView>
+      <Separator layoutY="29.0" prefHeight="6.0" prefWidth="1024.0" />
+      <Label layoutX="43.0" layoutY="68.0" text="Buscar" />
+      <TextField fx:id="txtBuscar" layoutX="99.0" layoutY="63.0" />
+      <Button fx:id="btnAgregar" layoutX="128.0" layoutY="674.0" mnemonicParsing="false" onAction="#agregarEmpleado" text="Agregar" />
+      <Button fx:id="btnActualizar" layoutX="364.0" layoutY="674.0" mnemonicParsing="false" onAction="#actualizarEmpleado" text="Actualizar" />
+      <Button fx:id="btnEliminar" layoutX="589.0" layoutY="674.0" mnemonicParsing="false" onAction="#eliminarEmpleado" text="Eliminar" />
+      <Button fx:id="btnCambiarEstado" layoutX="776.0" layoutY="674.0" mnemonicParsing="false" onAction="#cambiarEstadoEmpleado" text="Cambiar estado" />
    </children>
 </AnchorPane>
