--- a/consecionarioUQ/src/co/uniquindio/concesionario/view/administradorView.fxml
+++ b/consecionarioUQ/src/co/uniquindio/concesionario/view/administradorView.fxml
@@ -30,7 +30,7 @@
       <Separator layoutY="29.0" prefHeight="6.0" prefWidth="1024.0" />
       <Label layoutX="43.0" layoutY="68.0" text="Buscar" />
       <TextField fx:id="txtBuscar" layoutX="99.0" layoutY="63.0" />
-      <Button fx:id="btnAgregar" layoutX="128.0" layoutY="674.0" mnemonicParsing="false" onAction="#agregarEmpleado" text="Agregar" />
+      <Button fx:id="btnAgregar" layoutX="128.0" layoutY="674.0" mnemonicParsing="false" onAction="#abrirVentAgregarEmpleado" text="Agregar" />
       <Button fx:id="btnActualizar" layoutX="364.0" layoutY="674.0" mnemonicParsing="false" onAction="#actualizarEmpleado" text="Actualizar" />
       <Button fx:id="btnEliminar" layoutX="589.0" layoutY="674.0" mnemonicParsing="false" onAction="#eliminarEmpleado" text="Eliminar" />
       <Button fx:id="btnCambiarEstado" layoutX="776.0" layoutY="674.0" mnemonicParsing="false" onAction="#cambiarEstadoEmpleado" text="Cambiar estado" />
