avance  en el controlador de agregarEmpleado

--- a/consecionarioUQ/src/co/uniquindio/concesionario/view/agregarEmpleadoView.fxml
+++ b/consecionarioUQ/src/co/uniquindio/concesionario/view/agregarEmpleadoView.fxml
@@ -20,5 +20,7 @@
       <TextField fx:id="txtSueldo" layoutX="197.0" layoutY="272.0" />
       <Button fx:id="btnAgregar" layoutX="146.0" layoutY="381.0" mnemonicParsing="false" onAction="#AgregarEmpleado" text="Agregar" />
       <Button fx:id="btnNuevo" layoutX="334.0" layoutY="381.0" mnemonicParsing="false" onAction="#NuevoEmpleado" text="Nuevo" />
+      <TextField fx:id="txtEdad" layoutX="197.0" layoutY="314.0" />
+      <Label layoutX="94.0" layoutY="319.0" text="Edad" />
    </children>
 </AnchorPane>
